Updated from GradleCenturion