@@ -10,14 +10,14 @@ import tools.data.structures.queue.BufferedQueue;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 
-import static core.bomb.modules.dh.hexamaze.hexalgorithm.storage.AbstractHexagon.calculateColumnLengthStream;
-import static java.util.stream.Collectors.toList;
+import static core.bomb.modules.dh.hexamaze.hexalgorithm.storage.AbstractHexagon.calculateColumnLengthArray;
 
 public class MazeSearch {
     public static final int ROTATION_COUNT = 6;
 
-    public static Grid search(@NotNull Maze maze, @NotNull Grid grid) {
+    public static Optional<Grid> search(@NotNull Maze maze, @NotNull Grid grid) {
         int gridSpan = grid.getHexagon().getSpan();
         int lastIndex = maze.getHexagon().getSpan() - gridSpan;
         BufferedQueue<BufferedQueue<HexNode>> pillar;
@@ -27,9 +27,9 @@ public class MazeSearch {
             pillar = generatePillar(maze, gridSpan, offset);
             output = searchPillar(pillar, grid);
             if (output != null)
-                return output;
+                return Optional.of(output);
         }
-        return null;
+        return Optional.empty();
     }
 
     private static BufferedQueue<BufferedQueue<HexNode>> generatePillar(Maze maze, int gridSpan, int offset) {
@@ -107,7 +107,7 @@ public class MazeSearch {
 
     private static BufferedQueue<BufferedQueue<HexNode>> createInitialCopy(
             BufferedQueue<BufferedQueue<HexNode>> pillar, int gridSideLength) {
-        int[] columnLengths = calculateColumnLengthStream(gridSideLength);
+        int[] columnLengths = calculateColumnLengthArray(gridSideLength);
         BufferedQueue<BufferedQueue<HexNode>> copiedGrid = new BufferedQueue<>(columnLengths.length);
 
         int index = 0;
@@ -136,7 +136,7 @@ public class MazeSearch {
                 .stream()
                 .flatMap(Collection::stream)
                 .map(HexNode::getHexShape)
-                .collect(toList());
+                .toList();
     }
 
     private static void moveToNextSegment(BufferedQueue<BufferedQueue<HexNode>> pillar,
